# bataille_navale_IFE2

./: .gitignore  CMakeLists.txt  README.md  bataille_navale_utbm.cbp  bataille_navale_utbm.depend  bataille_navale_utbm.layout  common_functions.c  common_functions.h  display.c  display.h  initialization.c  initialization.h  main.c  missile_attack.c  player_interaction.c  player_interaction.h  standard_functions.c  standard_functions.h  struct.h
headers/: active_mode.h  display.h  gui.h  gui_homepage.h  gui_main_game.h  initialization.h  linked_list.h  missile_attack.h  nyanpasu_lib.h  player_interaction.h  save.h  standard_functions.h  struct.h
save/: america  autosave  destroy  foo  slot 2  test  testFile
src/: active_mode.c  display.c  gui.c  gui_homepage.c  gui_main_game.c  initialization.c  linked_list.c  missile_attack.c  nyanpasu_lib.c  player_interaction.c  save.c  standard_functions.c
